--- a/src/screen.scss
+++ b/src/screen.scss
@@ -24,6 +24,10 @@ header {
             color: #000;
             text-decoration: none;
             text-shadow: white 1px 1px 2px;
+
+            &:hover {
+                color: #800;
+            }
         }
     }
 }
