--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -81,20 +81,24 @@ header .title a {
   text-decoration: none;
   text-shadow: white 1px 1px 2px;
 }
+/* line 28, ../src/screen.scss */
+header .title a:hover {
+  color: #800;
+}
 
-/* line 31, ../src/screen.scss */
+/* line 35, ../src/screen.scss */
 .page .coming-soon {
   text-align: center;
   font-size: 2em;
   padding: 200px 0;
 }
 
-/* line 37, ../src/screen.scss */
+/* line 41, ../src/screen.scss */
 footer {
   border-top: 1px solid #AAA;
   padding: 10px 0;
 }
-/* line 41, ../src/screen.scss */
+/* line 45, ../src/screen.scss */
 footer .footnote {
   width: 960px;
   margin: auto;
