Changed background to black

--- a/src/screen.scss
+++ b/src/screen.scss
@@ -6,11 +6,11 @@
 @import "compass/reset";
 
 body {
-
+     background: #000;
 }
 
 header {
-    background: #CCC;
+    background: #AAA;
     font-size: 3em;
     padding: 20px 0;
     color: #000;
@@ -23,7 +23,7 @@ header {
         a {
             color: #000;
             text-decoration: none;
-            text-shadow: white 1px 1px 2px;
+            text-shadow: white -1px -1px 2px;
 
             &:hover {
                 color: #800;
@@ -35,17 +35,18 @@ header {
     .coming-soon {
         text-align: center;
         font-size: 2em;
-        padding: 200px 0;
+        padding: 250px 0;
+        color: #FFF;
     }
 }
 footer {
-    border-top: 1px solid #AAA;
+    border-top: 1px solid #333;
     padding: 10px 0;
 
     .footnote {
         width: 960px;
         margin: auto;
-        color: #444;
+        color: #888;
         font-size: 0.85em;
     }
 }
