Added html5 shiv; added ie style;

--- a/src/screen.scss
+++ b/src/screen.scss
@@ -37,6 +37,7 @@ header {
         font-size: 2em;
         padding: 250px 0;
         color: #FFF;
+        text-shadow: #FA0 0px 0px 6px;
     }
 }
 footer {
