--- a/src/screen.scss
+++ b/src/screen.scss
@@ -5,47 +5,52 @@
 
 @import "compass/reset";
 
+@mixin page-width {width: 960px;margin:auto; }
 body {
-     background: #000;
+     background: #222;
+     font-family: serif;
+}
+
+.container {
+   @include page-width;
 }
 
 header {
-    background: #AAA;
     font-size: 3em;
-    padding: 20px 0;
+    padding: 85px 0;
     color: #000;
-    border-bottom: 1px solid #AAA;
-
-    .title {
-        width:960px;
-        margin: auto;
-
+    display: block;
+        .title {
         a {
-            color: #000;
             text-decoration: none;
-
-            &:hover {
-                color: #800;
-            }
+            display: block;
+            width: 384px;
+            margin: auto;
+            padding-right:50px;
         }
     }
 }
 .page {
-    .coming-soon {
-        text-align: center;
-        font-size: 2em;
-        padding: 250px 0;
-        color: #FFF;
-        text-shadow: #FA0 0px 0px 6px;
-    }
+      background: #444;
+      border: 1px solid #444;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -moz-box-shadow: #111 2px 1px 2px;
+      -webkit-box-shadow: #111 2px 1px 2px;
+      padding: 200px 0;
+      .coming-soon {
+          text-align: center;
+          color: white;
+          font-size: 1.5em;
+          text-shadow: #111 1px 1px 1px;
+      }
 }
+
 footer {
-    border-top: 1px solid #333;
-    padding: 10px 0;
+    margin: 30px 0 15px;
 
     .footnote {
-        width: 960px;
-        margin: auto;
+        text-align: center;
         color: #888;
         font-size: 0.85em;
     }
