--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -62,52 +62,59 @@ a img {
   border: none;
 }
 
-/* line 8, ../src/screen.scss */
+/* line 9, ../src/screen.scss */
 body {
-  background: #000;
+  background: #222;
+  font-family: serif;
 }
 
-/* line 12, ../src/screen.scss */
-header {
-  background: #AAA;
-  font-size: 3em;
-  padding: 20px 0;
-  color: #000;
-  border-bottom: 1px solid #AAA;
-}
-/* line 19, ../src/screen.scss */
-header .title {
+/* line 14, ../src/screen.scss */
+.container {
   width: 960px;
   margin: auto;
 }
-/* line 23, ../src/screen.scss */
-header .title a {
+
+/* line 18, ../src/screen.scss */
+header {
+  font-size: 3em;
+  padding: 85px 0;
   color: #000;
-  text-decoration: none;
+  display: block;
 }
-/* line 27, ../src/screen.scss */
-header .title a:hover {
-  color: #800;
+/* line 24, ../src/screen.scss */
+header .title a {
+  text-decoration: none;
+  display: block;
+  width: 384px;
+  margin: auto;
+  padding-right: 50px;
 }
 
-/* line 34, ../src/screen.scss */
+/* line 33, ../src/screen.scss */
+.page {
+  background: #444;
+  border: 1px solid #444;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-box-shadow: #111 2px 1px 2px;
+  -webkit-box-shadow: #111 2px 1px 2px;
+  padding: 200px 0;
+}
+/* line 41, ../src/screen.scss */
 .page .coming-soon {
   text-align: center;
-  font-size: 2em;
-  padding: 250px 0;
-  color: #FFF;
-  text-shadow: #FA0 0px 0px 6px;
+  color: white;
+  font-size: 1.5em;
+  text-shadow: #111 1px 1px 1px;
 }
 
-/* line 42, ../src/screen.scss */
+/* line 49, ../src/screen.scss */
 footer {
-  border-top: 1px solid #333;
-  padding: 10px 0;
+  margin: 30px 0 15px;
 }
-/* line 46, ../src/screen.scss */
+/* line 52, ../src/screen.scss */
 footer .footnote {
-  width: 960px;
-  margin: auto;
+  text-align: center;
   color: #888;
   font-size: 0.85em;
 }
