--- a/src/screen.scss
+++ b/src/screen.scss
@@ -7,7 +7,7 @@
 
 @mixin page-width {width: 960px;margin:auto; }
 body {
-     background: #222;
+     background: #222 url("../images/apple.png") repeat;
      font-family: serif;
 }
 
