--- a/stylesheets/ie.css
+++ b/stylesheets/ie.css
@@ -1,5 +1,166 @@
-/* Welcome to Compass. Use this file to write IE specific override styles.
+/* Welcome to Compass.
+ * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
- * <!--[if IE]>
- *   <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
- * <![endif]--> */
+ * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+/* line 14, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-weight: inherit;
+  font-style: inherit;
+  font-size: 100%;
+  font-family: inherit;
+  vertical-align: baseline;
+}
+
+/* line 17, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+body {
+  line-height: 1;
+  color: black;
+  background: white;
+}
+
+/* line 19, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+ol, ul {
+  list-style: none;
+}
+
+/* line 21, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  vertical-align: middle;
+}
+
+/* line 23, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
+}
+
+/* line 25, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+q, blockquote {
+  quotes: "" "";
+}
+/* line 96, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+q:before, q:after, blockquote:before, blockquote:after {
+  content: "";
+}
+
+/* line 27, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+a img {
+  border: none;
+}
+
+/* line 10, ../src/ie.scss */
+body {
+  background: #222222 url("../images/bgtexture.png") repeat;
+  font-family: sans-serif;
+  line-height: 1.3em;
+  color: #ccc;
+}
+
+/* line 16, ../src/ie.scss */
+a {
+  color: #ccc;
+  text-decoration: none;
+}
+
+/* line 21, ../src/ie.scss */
+h3 {
+  border-bottom: 3px solid #600;
+  color: #080;
+  font-size: 1.3em;
+  font-weight: bold;
+  margin-bottom: 5px;
+  padding: 2px;
+}
+
+/* line 30, ../src/ie.scss */
+.container {
+  width: 960px;
+  margin: auto;
+}
+/* line 33, ../src/ie.scss */
+.container header {
+  font-size: 3em;
+  padding: 85px 0;
+  color: #000;
+  display: block;
+}
+/* line 39, ../src/ie.scss */
+.container header h1 a {
+  text-decoration: none;
+  display: block;
+  width: 384px;
+  margin: auto;
+  padding-right: 50px;
+}
+/* line 49, ../src/ie.scss */
+.container .page .blogs, .container .page .social {
+  background: #444;
+  border: 1px solid #444;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-box-shadow: #111 2px 1px 2px;
+  -webkit-box-shadow: #111 2px 1px 2px;
+  margin-bottom: 20px;
+  padding: 10px 0;
+}
+/* line 58, ../src/ie.scss */
+.container .page .blogs .coming-soon, .container .page .social .coming-soon {
+  text-align: center;
+  color: white;
+  font-size: 1.5em;
+  text-shadow: #111 1px 1px 1px;
+}
+/* line 64, ../src/ie.scss */
+.container .page .blogs img, .container .page .social img {
+  display: block;
+  margin: 10px auto 30px;
+}
+/* line 68, ../src/ie.scss */
+.container .page .blogs a, .container .page .social a {
+  color: #080;
+  font-weight: bold;
+}
+/* line 75, ../src/ie.scss */
+.container footer {
+  margin: 15px 0;
+}
+/* line 78, ../src/ie.scss */
+.container footer .footnote {
+  text-align: center;
+  color: #888;
+  font-size: 0.85em;
+}
+
+/* line 87, ../src/ie.scss */
+.cols {
+  width: 100%;
+  overflow: hidden;
+}
+/* line 90, ../src/ie.scss */
+.cols .col1_3, .cols .col2_3, .cols .col3_3 {
+  float: left;
+  width: 31%;
+  padding: 0 10px;
+}
+/* line 95, ../src/ie.scss */
+.cols .col2_3, .cols .col3_3 {
+  border-left: 1px solid #999;
+}
+/* line 98, ../src/ie.scss */
+.cols .col3_3 {
+  float: right;
+}
