--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -127,7 +127,8 @@ h3 {
   padding: 10px;
 }
 /* line 68, ../src/screen.scss */
-.container .page .blogs, .container .page .social {
+.container .page .blogs, .container .page .social, .container .page .aboutme {
+  overflow: hidden;
   background: #444;
   border: 1px solid #444;
   -moz-border-radius: 5px;
@@ -137,50 +138,59 @@ h3 {
   margin-bottom: 20px;
   padding: 0 0 10px;
 }
-/* line 77, ../src/screen.scss */
-.container .page .blogs .coming-soon, .container .page .social .coming-soon {
+/* line 78, ../src/screen.scss */
+.container .page .blogs .coming-soon, .container .page .social .coming-soon, .container .page .aboutme .coming-soon {
   text-align: center;
   color: white;
   font-size: 1.5em;
   text-shadow: #111 1px 1px 1px;
 }
-/* line 83, ../src/screen.scss */
-.container .page .blogs img, .container .page .social img {
+/* line 84, ../src/screen.scss */
+.container .page .blogs img.blogpics, .container .page .social img.blogpics, .container .page .aboutme img.blogpics {
   display: block;
   margin: 10px auto 30px;
 }
-/* line 87, ../src/screen.scss */
-.container .page .blogs a, .container .page .social a {
+/* line 88, ../src/screen.scss */
+.container .page .blogs img.about, .container .page .social img.about, .container .page .aboutme img.about {
+  float: right;
+  padding: 10px;
+}
+/* line 92, ../src/screen.scss */
+.container .page .blogs a, .container .page .social a, .container .page .aboutme a {
   color: #080;
   font-weight: bold;
 }
-/* line 94, ../src/screen.scss */
+/* line 97, ../src/screen.scss */
+.container .page .aboutme p {
+  padding-left: 10px;
+}
+/* line 102, ../src/screen.scss */
 .container footer {
   margin: 15px 0;
 }
-/* line 97, ../src/screen.scss */
+/* line 105, ../src/screen.scss */
 .container footer .footnote {
   text-align: center;
   color: #888;
   font-size: 0.85em;
 }
 
-/* line 106, ../src/screen.scss */
+/* line 114, ../src/screen.scss */
 .cols {
   width: 100%;
   overflow: hidden;
 }
-/* line 109, ../src/screen.scss */
+/* line 117, ../src/screen.scss */
 .cols .col1_3, .cols .col2_3, .cols .col3_3 {
   float: left;
   width: 31%;
   padding: 0 10px;
 }
-/* line 114, ../src/screen.scss */
+/* line 122, ../src/screen.scss */
 .cols .col1_3, .cols .col2_3 {
   border-right: 1px solid #000;
 }
-/* line 117, ../src/screen.scss */
+/* line 125, ../src/screen.scss */
 .cols .col2_3, .cols .col3_3 {
   border-left: 1px solid #666;
 }
