Padding fixed. h3 color changed.

--- a/src/screen.scss
+++ b/src/screen.scss
@@ -20,7 +20,7 @@ a {
 
 h3 {
     border-bottom: 3px solid #600;
-    color: #ACEB00;
+    color: #CFEB00;
     font-size: 1.3em;
     font-weight: bold;
     margin-bottom: 5px;
@@ -125,7 +125,7 @@ h3 {
     ul.cols {
       text-align: center;
       li {
-        padding: 15px 0;
+        padding: 15px 10px;
       }
     }
 }
