--- a/src/screen.scss
+++ b/src/screen.scss
@@ -7,6 +7,10 @@
 
 @mixin page-width {width: 960px;margin:auto; }
 
+@mixin bg-img($clr, $src, $repeat: repeat, $x: 0, $y: 0) {
+    background: $clr url('../images/'+$src) $repeat $x $y;
+}
+
 body {
      background: #222 url("../images/bgtexture.png") repeat;
      font-family: sans-serif;
@@ -94,6 +98,34 @@ h3 {
         .aboutme p {
             padding-left: 10px;
         }
+        div.social-media-wrapper {
+          display: block;
+          overflow: hidden;
+          margin: 10px auto 0;
+          width: 360px;
+        }
+        ul.social-icons {
+          li {
+             float: left;
+             a {
+               display:block;
+               width: 32px;
+               height: 32px;
+               margin-left: 8px;
+
+               &.twitter {@include bg-img (#000, "icons/twitter_32.png", repeat, 0, 0);}
+               &.github {@include bg-img (#000, "icons/github_32.png", repeat, 0, 0);}
+               &.email {@include bg-img (#000, "icons/email_32.png", repeat, 0, 0);}
+               &.linkedin {@include bg-img (#000, "icons/linkedin_32.png", repeat, 0, 0);}
+               &.flickr {@include bg-img (#000, "icons/flickr_32.png", repeat, 0, 0);}
+               &.facebook {@include bg-img (#000, "icons/facebook_32.png", repeat, 0, 0);}
+               &.posterous {@include bg-img (#000, "icons/posterous_32.png", repeat, 0, 0);}
+               &.googlebuzz {@include bg-img (#000, "icons/google_buzz_32.png", repeat, 0, 0);}
+               &.picasa {@include bg-img (#000, "icons/picasa_32.png", repeat, 0, 0);}                              
+             }
+          }
+
+        }
     }
 
     footer {
@@ -121,11 +153,5 @@ h3 {
     }
     .col2_3, .col3_3 {
         border-left: 1px solid #666;
-    }
-    ul.cols {
-      text-align: center;
-      li {
-        padding: 15px 10px;
-      }
     }
 }
