--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -62,7 +62,7 @@ a img {
   border: none;
 }
 
-/* line 10, ../src/screen.scss */
+/* line 14, ../src/screen.scss */
 body {
   background: #222222 url("../images/bgtexture.png") repeat;
   font-family: sans-serif;
@@ -70,13 +70,13 @@ body {
   color: #ccc;
 }
 
-/* line 16, ../src/screen.scss */
+/* line 20, ../src/screen.scss */
 a {
   color: #A8A565;
   text-decoration: none;
 }
 
-/* line 21, ../src/screen.scss */
+/* line 25, ../src/screen.scss */
 h3 {
   border-bottom: 3px solid #600;
   color: #CFEB00;
@@ -86,32 +86,32 @@ h3 {
   padding: 2px;
 }
 
-/* line 30, ../src/screen.scss */
+/* line 34, ../src/screen.scss */
 .container {
   width: 960px;
   margin: auto;
 }
-/* line 33, ../src/screen.scss */
+/* line 37, ../src/screen.scss */
 .container header {
   font-size: 3em;
   padding: 85px 0;
   color: #000;
   display: block;
 }
-/* line 39, ../src/screen.scss */
+/* line 43, ../src/screen.scss */
 .container header h1 a {
   text-decoration: none;
   display: block;
   width: 384px;
   margin: auto;
 }
-/* line 48, ../src/screen.scss */
+/* line 52, ../src/screen.scss */
 .container .page h2 {
   display: block;
   padding: 10px 0;
   margin-bottom: 10px;
 }
-/* line 52, ../src/screen.scss */
+/* line 56, ../src/screen.scss */
 .container .page h2 span {
   background: #EEE;
   color: #800;
@@ -125,7 +125,7 @@ h3 {
   font-weight: bold;
   padding: 10px;
 }
-/* line 67, ../src/screen.scss */
+/* line 71, ../src/screen.scss */
 .container .page .blogs, .container .page .social, .container .page .aboutme {
   overflow: hidden;
   background: #000;
@@ -137,64 +137,110 @@ h3 {
   margin-bottom: 20px;
   padding: 0 0 10px;
 }
-/* line 77, ../src/screen.scss */
+/* line 81, ../src/screen.scss */
 .container .page .blogs .coming-soon, .container .page .social .coming-soon, .container .page .aboutme .coming-soon {
   text-align: center;
   color: white;
   font-size: 1.5em;
   text-shadow: #111 1px 1px 1px;
 }
-/* line 83, ../src/screen.scss */
+/* line 87, ../src/screen.scss */
 .container .page .blogs img.blogpics, .container .page .social img.blogpics, .container .page .aboutme img.blogpics {
   display: block;
   margin: 10px auto 30px;
   border: 1px solid #666;
 }
-/* line 88, ../src/screen.scss */
+/* line 92, ../src/screen.scss */
 .container .page .blogs img.about, .container .page .social img.about, .container .page .aboutme img.about {
   float: right;
   margin: 10px 24px;
   border: 1px solid #666;
 }
-/* line 94, ../src/screen.scss */
+/* line 98, ../src/screen.scss */
 .container .page .aboutme p {
   padding-left: 10px;
 }
-/* line 99, ../src/screen.scss */
+/* line 101, ../src/screen.scss */
+.container .page div.social-media-wrapper {
+  display: block;
+  overflow: hidden;
+  margin: 10px auto 0;
+  width: 360px;
+}
+/* line 108, ../src/screen.scss */
+.container .page ul.social-icons li {
+  float: left;
+}
+/* line 110, ../src/screen.scss */
+.container .page ul.social-icons li a {
+  display: block;
+  width: 32px;
+  height: 32px;
+  margin-left: 8px;
+}
+/* line 116, ../src/screen.scss */
+.container .page ul.social-icons li a.twitter {
+  background: black url("../images/icons/twitter_32.png") repeat 0 0;
+}
+/* line 117, ../src/screen.scss */
+.container .page ul.social-icons li a.github {
+  background: black url("../images/icons/github_32.png") repeat 0 0;
+}
+/* line 118, ../src/screen.scss */
+.container .page ul.social-icons li a.email {
+  background: black url("../images/icons/email_32.png") repeat 0 0;
+}
+/* line 119, ../src/screen.scss */
+.container .page ul.social-icons li a.linkedin {
+  background: black url("../images/icons/linkedin_32.png") repeat 0 0;
+}
+/* line 120, ../src/screen.scss */
+.container .page ul.social-icons li a.flickr {
+  background: black url("../images/icons/flickr_32.png") repeat 0 0;
+}
+/* line 121, ../src/screen.scss */
+.container .page ul.social-icons li a.facebook {
+  background: black url("../images/icons/facebook_32.png") repeat 0 0;
+}
+/* line 122, ../src/screen.scss */
+.container .page ul.social-icons li a.posterous {
+  background: black url("../images/icons/posterous_32.png") repeat 0 0;
+}
+/* line 123, ../src/screen.scss */
+.container .page ul.social-icons li a.googlebuzz {
+  background: black url("../images/icons/google_buzz_32.png") repeat 0 0;
+}
+/* line 124, ../src/screen.scss */
+.container .page ul.social-icons li a.picasa {
+  background: black url("../images/icons/picasa_32.png") repeat 0 0;
+}
+/* line 131, ../src/screen.scss */
 .container footer {
   margin: 15px 0;
 }
-/* line 102, ../src/screen.scss */
+/* line 134, ../src/screen.scss */
 .container footer .footnote {
   text-align: center;
   color: #888;
   font-size: 0.85em;
 }
 
-/* line 111, ../src/screen.scss */
+/* line 143, ../src/screen.scss */
 .cols {
   width: 100%;
   overflow: hidden;
 }
-/* line 114, ../src/screen.scss */
+/* line 146, ../src/screen.scss */
 .cols .col1_3, .cols .col2_3, .cols .col3_3 {
   float: left;
   width: 31%;
   padding: 0 10px;
 }
-/* line 119, ../src/screen.scss */
+/* line 151, ../src/screen.scss */
 .cols .col1_3, .cols .col2_3 {
   border-right: 1px solid #000;
 }
-/* line 122, ../src/screen.scss */
+/* line 154, ../src/screen.scss */
 .cols .col2_3, .cols .col3_3 {
   border-left: 1px solid #666;
-}
-/* line 125, ../src/screen.scss */
-.cols ul.cols {
-  text-align: center;
-}
-/* line 127, ../src/screen.scss */
-.cols ul.cols li {
-  padding: 15px 10px;
 }
