--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -65,18 +65,23 @@ a img {
 /* line 14, ../src/screen.scss */
 body {
   background: #222222 url("../images/bgtexture.png") repeat;
-  font-family: sans-serif;
-  line-height: 1.3em;
-  color: #ccc;
+  font-family: 'Trebuche MS';
+  line-height: 1.2em;
+  color: #AAA;
+  font-size: 15px;
 }
 
-/* line 20, ../src/screen.scss */
+/* line 21, ../src/screen.scss */
 a {
   color: #A8A565;
   text-decoration: none;
 }
+/* line 24, ../src/screen.scss */
+a:hover {
+  color: #CFEB00;
+}
 
-/* line 25, ../src/screen.scss */
+/* line 29, ../src/screen.scss */
 h3 {
   color: #CFEB00;
   font-size: 1.3em;
@@ -85,37 +90,42 @@ h3 {
   padding: 2px 0;
 }
 
-/* line 33, ../src/screen.scss */
+/* line 37, ../src/screen.scss */
 p, a {
   font-family: Helvetica;
 }
 
-/* line 37, ../src/screen.scss */
+/* line 41, ../src/screen.scss */
+img {
+  border: 1px solid #333;
+}
+
+/* line 45, ../src/screen.scss */
 .container {
   width: 960px;
   margin: auto;
 }
-/* line 40, ../src/screen.scss */
+/* line 48, ../src/screen.scss */
 .container header {
   font-size: 3em;
-  padding: 85px 0;
+  padding: 75px 0;
   color: #000;
   display: block;
 }
-/* line 46, ../src/screen.scss */
+/* line 54, ../src/screen.scss */
 .container header h1 a {
   text-decoration: none;
   display: block;
   width: 384px;
   margin: auto;
 }
-/* line 55, ../src/screen.scss */
+/* line 63, ../src/screen.scss */
 .container .page h2 {
   display: block;
   padding: 10px 0;
   margin-bottom: 10px;
 }
-/* line 59, ../src/screen.scss */
+/* line 67, ../src/screen.scss */
 .container .page h2 span {
   background: #EEE;
   color: #800;
@@ -128,115 +138,113 @@ p, a {
   font-size: 1.2em;
   padding: 10px;
 }
-/* line 73, ../src/screen.scss */
+/* line 81, ../src/screen.scss */
 .container .page .blogs, .container .page .social, .container .page .aboutme {
   overflow: hidden;
-  background: #000;
-  border: 1px solid #444;
+  background: #111;
+  border: 1px solid #333;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
-  -moz-box-shadow: #111 2px 1px 2px;
-  -webkit-box-shadow: #111 2px 1px 2px;
+  -moz-box-shadow: #111 2px 2px 2px;
+  -webkit-box-shadow: #111 2px 2px 2px;
   margin-bottom: 20px;
   padding: 0 0 10px;
 }
-/* line 84, ../src/screen.scss */
+/* line 92, ../src/screen.scss */
 .container .page .blogs img.blogpics, .container .page .social img.blogpics, .container .page .aboutme img.blogpics {
   display: block;
   margin: 10px auto 30px;
-  border: 1px solid #666;
 }
-/* line 89, ../src/screen.scss */
+/* line 96, ../src/screen.scss */
 .container .page .blogs img.about, .container .page .social img.about, .container .page .aboutme img.about {
   float: right;
   margin: 10px 24px;
-  border: 1px solid #666;
 }
-/* line 95, ../src/screen.scss */
+/* line 101, ../src/screen.scss */
 .container .page .aboutme p {
   padding: 5px 10px;
 }
-/* line 98, ../src/screen.scss */
+/* line 104, ../src/screen.scss */
 .container .page div.social-media-wrapper {
   display: block;
   overflow: hidden;
   margin: 10px auto 0;
   width: 360px;
 }
-/* line 105, ../src/screen.scss */
+/* line 111, ../src/screen.scss */
 .container .page ul.social-icons li {
   float: left;
 }
-/* line 107, ../src/screen.scss */
+/* line 113, ../src/screen.scss */
 .container .page ul.social-icons li a {
   display: block;
   width: 32px;
   height: 32px;
   margin-left: 8px;
 }
-/* line 113, ../src/screen.scss */
+/* line 119, ../src/screen.scss */
 .container .page ul.social-icons li a.twitter {
   background: black url("../images/icons/twitter_32.png") repeat 0 0;
 }
-/* line 114, ../src/screen.scss */
+/* line 120, ../src/screen.scss */
 .container .page ul.social-icons li a.github {
   background: black url("../images/icons/github_32.png") repeat 0 0;
 }
-/* line 115, ../src/screen.scss */
+/* line 121, ../src/screen.scss */
 .container .page ul.social-icons li a.email {
   background: black url("../images/icons/email_32.png") repeat 0 0;
 }
-/* line 116, ../src/screen.scss */
+/* line 122, ../src/screen.scss */
 .container .page ul.social-icons li a.linkedin {
   background: black url("../images/icons/linkedin_32.png") repeat 0 0;
 }
-/* line 117, ../src/screen.scss */
+/* line 123, ../src/screen.scss */
 .container .page ul.social-icons li a.flickr {
   background: black url("../images/icons/flickr_32.png") repeat 0 0;
 }
-/* line 118, ../src/screen.scss */
+/* line 124, ../src/screen.scss */
 .container .page ul.social-icons li a.facebook {
   background: black url("../images/icons/facebook_32.png") repeat 0 0;
 }
-/* line 119, ../src/screen.scss */
+/* line 125, ../src/screen.scss */
 .container .page ul.social-icons li a.posterous {
   background: black url("../images/icons/posterous_32.png") repeat 0 0;
 }
-/* line 120, ../src/screen.scss */
+/* line 126, ../src/screen.scss */
 .container .page ul.social-icons li a.googlebuzz {
   background: black url("../images/icons/google_buzz_32.png") repeat 0 0;
 }
-/* line 121, ../src/screen.scss */
+/* line 127, ../src/screen.scss */
 .container .page ul.social-icons li a.picasa {
   background: black url("../images/icons/picasa_32.png") repeat 0 0;
 }
-/* line 128, ../src/screen.scss */
+/* line 134, ../src/screen.scss */
 .container footer {
   margin: 15px 0;
 }
-/* line 131, ../src/screen.scss */
+/* line 137, ../src/screen.scss */
 .container footer .footnote {
   text-align: center;
   color: #888;
   font-size: 0.85em;
 }
 
-/* line 140, ../src/screen.scss */
+/* line 146, ../src/screen.scss */
 .cols {
   width: 100%;
   overflow: hidden;
 }
-/* line 143, ../src/screen.scss */
+/* line 149, ../src/screen.scss */
 .cols .col1_3, .cols .col2_3, .cols .col3_3 {
   float: left;
   width: 31%;
   padding: 0 10px;
 }
-/* line 148, ../src/screen.scss */
+/* line 154, ../src/screen.scss */
 .cols .col1_3, .cols .col2_3 {
-  border-right: 1px solid #222;
+  border-right: 2px solid #000;
 }
-/* line 151, ../src/screen.scss */
+/* line 157, ../src/screen.scss */
 .cols .col2_3, .cols .col3_3 {
-  border-left: 1px solid #666;
+  border-left: 1px solid #333;
 }
