--- a/src/screen.scss
+++ b/src/screen.scss
@@ -13,7 +13,7 @@
 
 body {
    background: #222 url("../images/bgtexture.png") repeat;
-   font-family: 'Trebuche MS';
+   font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Verdana, sans-serif;
    line-height:1.2em;
    color: #AAA;
    font-size: 15px;
@@ -97,7 +97,7 @@ img {
          }
       }
       .aboutme p {
-         padding: 5px 10px;
+         padding: 5px 20px;
       }
       div.social-media-wrapper {
          display: block;
