--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,248 +1,1 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 14, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-weight: inherit;
-  font-style: inherit;
-  font-size: 100%;
-  font-family: inherit;
-  vertical-align: baseline;
-}
-
-/* line 17, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-body {
-  line-height: 1;
-  color: black;
-  background: white;
-}
-
-/* line 19, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-ol, ul {
-  list-style: none;
-}
-
-/* line 21, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-table {
-  border-collapse: separate;
-  border-spacing: 0;
-  vertical-align: middle;
-}
-
-/* line 23, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-/* line 25, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q, blockquote {
-  quotes: "" "";
-}
-/* line 96, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-}
-
-/* line 27, ../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-a img {
-  border: none;
-}
-
-/* line 14, ../src/screen.scss */
-body {
-  background: #222222 url("../images/bgtexture.png") repeat;
-  font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Verdana, sans-serif;
-  line-height: 1.2em;
-  color: #AAA;
-  font-size: 15px;
-}
-
-/* line 21, ../src/screen.scss */
-a {
-  color: #A8A565;
-  text-decoration: none;
-}
-/* line 24, ../src/screen.scss */
-a:hover {
-  color: #CFEB00;
-}
-
-/* line 29, ../src/screen.scss */
-h3 {
-  color: #CFEB00;
-  font-size: 1.3em;
-  font-weight: bold;
-  margin-bottom: 5px;
-  padding: 2px 0;
-}
-
-/* line 37, ../src/screen.scss */
-p, a {
-  font-family: Helvetica;
-}
-
-/* line 41, ../src/screen.scss */
-img {
-  border: 1px solid #333;
-}
-
-/* line 45, ../src/screen.scss */
-.container {
-  width: 960px;
-  margin: auto;
-}
-/* line 48, ../src/screen.scss */
-.container header {
-  font-size: 3em;
-  padding: 75px 0;
-  color: #000;
-  display: block;
-}
-/* line 54, ../src/screen.scss */
-.container header h1 a {
-  text-decoration: none;
-  display: block;
-  width: 384px;
-  margin: auto;
-}
-/* line 63, ../src/screen.scss */
-.container .page h2 {
-  display: block;
-  padding: 10px 0;
-  margin-bottom: 10px;
-}
-/* line 67, ../src/screen.scss */
-.container .page h2 span {
-  margin-left: 10px;
-  border-bottom: 5px solid #A00;
-  background: #800;
-  color: #DDD;
-  -webkit-box-shadow: #333 0px 1px 1px;
-  -moz-box-shadow: #333 0px 1px 1px;
-  font-size: 1.2em;
-  padding: 10px 10px 8px;
-}
-/* line 79, ../src/screen.scss */
-.container .page .blogs, .container .page .social, .container .page .aboutme {
-  overflow: hidden;
-  background: #111;
-  border: 1px solid #333;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-box-shadow: #111 2px 2px 2px;
-  -webkit-box-shadow: #111 2px 2px 2px;
-  margin-bottom: 20px;
-  padding: 0 0 10px;
-}
-/* line 90, ../src/screen.scss */
-.container .page .blogs img.blogpics, .container .page .social img.blogpics, .container .page .aboutme img.blogpics {
-  display: block;
-  margin: 10px auto 30px;
-}
-/* line 94, ../src/screen.scss */
-.container .page .blogs img.about, .container .page .social img.about, .container .page .aboutme img.about {
-  float: right;
-  margin: 10px 24px;
-}
-/* line 99, ../src/screen.scss */
-.container .page .aboutme p {
-  padding: 5px 20px;
-}
-/* line 102, ../src/screen.scss */
-.container .page div.social-media-wrapper {
-  display: block;
-  overflow: hidden;
-  margin: 10px auto 0;
-  width: 360px;
-}
-/* line 109, ../src/screen.scss */
-.container .page ul.social-icons li {
-  float: left;
-}
-/* line 111, ../src/screen.scss */
-.container .page ul.social-icons li a {
-  display: block;
-  width: 32px;
-  height: 32px;
-  margin-left: 8px;
-}
-/* line 117, ../src/screen.scss */
-.container .page ul.social-icons li a.twitter {
-  background: black url("../images/icons/twitter_32.png") repeat 0 0;
-}
-/* line 118, ../src/screen.scss */
-.container .page ul.social-icons li a.github {
-  background: black url("../images/icons/github_32.png") repeat 0 0;
-}
-/* line 119, ../src/screen.scss */
-.container .page ul.social-icons li a.email {
-  background: black url("../images/icons/email_32.png") repeat 0 0;
-}
-/* line 120, ../src/screen.scss */
-.container .page ul.social-icons li a.linkedin {
-  background: black url("../images/icons/linkedin_32.png") repeat 0 0;
-}
-/* line 121, ../src/screen.scss */
-.container .page ul.social-icons li a.flickr {
-  background: black url("../images/icons/flickr_32.png") repeat 0 0;
-}
-/* line 122, ../src/screen.scss */
-.container .page ul.social-icons li a.facebook {
-  background: black url("../images/icons/facebook_32.png") repeat 0 0;
-}
-/* line 123, ../src/screen.scss */
-.container .page ul.social-icons li a.posterous {
-  background: black url("../images/icons/posterous_32.png") repeat 0 0;
-}
-/* line 124, ../src/screen.scss */
-.container .page ul.social-icons li a.googlebuzz {
-  background: black url("../images/icons/google_buzz_32.png") repeat 0 0;
-}
-/* line 125, ../src/screen.scss */
-.container .page ul.social-icons li a.picasa {
-  background: black url("../images/icons/picasa_32.png") repeat 0 0;
-}
-/* line 132, ../src/screen.scss */
-.container footer {
-  margin: 15px 0;
-}
-/* line 135, ../src/screen.scss */
-.container footer .footnote {
-  text-align: center;
-  color: #888;
-  font-size: 0.85em;
-}
-
-/* line 144, ../src/screen.scss */
-.cols {
-  width: 100%;
-  overflow: hidden;
-}
-/* line 147, ../src/screen.scss */
-.cols .col1_3, .cols .col2_3, .cols .col3_3 {
-  float: left;
-  width: 31%;
-  padding: 0 10px;
-}
-/* line 152, ../src/screen.scss */
-.cols .col1_3, .cols .col2_3 {
-  border-right: 2px solid #000;
-}
-/* line 155, ../src/screen.scss */
-.cols .col2_3, .cols .col3_3 {
-  border-left: 1px solid #333;
-}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline}body{line-height:1;color:black;background:white}ol,ul{list-style:none}table{border-collapse:separate;border-spacing:0;vertical-align:middle}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:"" ""}q:before,q:after,blockquote:before,blockquote:after{content:""}a img{border:none}body{background:#222222 url("../images/bgtexture.png") repeat;font-family:'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Verdana, sans-serif;line-height:1.2em;color:#AAA;font-size:15px}a{color:#A8A565;text-decoration:none}a:hover{color:#CFEB00}h3{color:#CFEB00;font-size:1.3em;font-weight:bold;margin-bottom:5px;padding:2px 0}p,a{font-family:Helvetica}img{border:1px solid #333}.container{width:960px;margin:auto}.container header{font-size:3em;padding:75px 0;color:#000;display:block}.container header h1 a{text-decoration:none;display:block;width:384px;margin:auto}.container .page h2{display:block;padding:10px 0;margin-bottom:10px}.container .page h2 span{margin-left:10px;border-bottom:5px solid #A00;background:#800;color:#DDD;-webkit-box-shadow:#333 0px 1px 1px;-moz-box-shadow:#333 0px 1px 1px;font-size:1.2em;padding:10px 10px 8px}.container .page .blogs,.container .page .social,.container .page .aboutme{overflow:hidden;background:#111;border:1px solid #333;-moz-border-radius:5px;-webkit-border-radius:5px;-moz-box-shadow:#111 2px 2px 2px;-webkit-box-shadow:#111 2px 2px 2px;margin-bottom:20px;padding:0 0 10px}.container .page .blogs img.blogpics,.container .page .social img.blogpics,.container .page .aboutme img.blogpics{display:block;margin:10px auto 30px}.container .page .blogs img.about,.container .page .social img.about,.container .page .aboutme img.about{float:right;margin:10px 24px}.container .page .aboutme p{padding:5px 20px}.container .page div.social-media-wrapper{display:block;overflow:hidden;margin:10px auto 0;width:360px}.container .page ul.social-icons li{float:left}.container .page ul.social-icons li a{display:block;width:32px;height:32px;margin-left:8px}.container .page ul.social-icons li a.twitter{background:transparent url("../images/icons/twitter_32.png") repeat 0 0}.container .page ul.social-icons li a.github{background:transparent url("../images/icons/github_32.png") repeat 0 0}.container .page ul.social-icons li a.email{background:transparent url("../images/icons/email_32.png") repeat 0 0}.container .page ul.social-icons li a.linkedin{background:transparent url("../images/icons/linkedin_32.png") repeat 0 0}.container .page ul.social-icons li a.flickr{background:transparent url("../images/icons/flickr_32.png") repeat 0 0}.container .page ul.social-icons li a.facebook{background:transparent url("../images/icons/facebook_32.png") repeat 0 0}.container .page ul.social-icons li a.posterous{background:transparent url("../images/icons/posterous_32.png") repeat 0 0}.container .page ul.social-icons li a.googlebuzz{background:transparent url("../images/icons/google_buzz_32.png") repeat 0 0}.container .page ul.social-icons li a.picasa{background:transparent url("../images/icons/picasa_32.png") repeat 0 0}.container footer{margin:15px 0}.container footer .footnote{text-align:center;color:#888;font-size:0.85em}.cols{width:100%;overflow:hidden}.cols .col1_3,.cols .col2_3,.cols .col3_3{float:left;width:31%;padding:0 10px}.cols .col1_3,.cols .col2_3{border-right:2px solid #000}.cols .col2_3,.cols .col3_3{border-left:1px solid #333}
