--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,1 +1,271 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline}body{line-height:1;color:black;background:white}ol,ul{list-style:none}table{border-collapse:separate;border-spacing:0;vertical-align:middle}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:"" ""}q:before,q:after,blockquote:before,blockquote:after{content:""}a img{border:none}body{background:#222222 url("../images/bgtexture.png") repeat 0 0;font-family:'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Verdana, sans-serif;line-height:1.2em;color:#AAA;font-size:15px}a{color:#A8A565;text-decoration:none}a:hover{color:#CFEB00}h3{color:#CFEB00;font-size:1.3em;margin-bottom:5px;padding:2px 0}p,a{font-family:Helvetica}.container{width:960px;margin:auto}.container header{font-size:3em;padding:75px 0;color:#000;display:block}.container header h1 a{text-decoration:none;display:block;width:384px;height:150px;margin:auto;background:transparent url("../images/sprite.png") no-repeat 0 0}.container .page h2{display:block;padding:10px 0;margin-bottom:10px}.container .page h2 span{margin-left:10px;border-bottom:5px solid #A00;background:#800;color:#DDD;-webkit-box-shadow:#333 0px 1px 1px;-moz-box-shadow:#333 0px 1px 1px;font-size:1.2em;padding:10px 10px 8px}.container .page .blogs,.container .page .social,.container .page .aboutme{display:block;overflow:hidden;background:#111;border:1px solid #333;-moz-border-radius:5px;-webkit-border-radius:5px;-moz-box-shadow:#111 2px 2px 2px;-webkit-box-shadow:#111 2px 2px 2px;margin-bottom:20px;padding:0 0 10px}.container .page .aboutme p{padding:5px 20px}.container .page .about{background:transparent url("../images/sprite.png") no-repeat 0 -162px;display:block;width:246px;height:250px;margin:10px 24px;float:right;border:1px solid #333}.container .page .blog{display:block;width:279px;height:187px;margin:10px auto 30px;border:1px solid #333}.container .page .photography{background:transparent url("../images/sprite.png") no-repeat 0 -417px}.container .page .technology{background:transparent url("../images/sprite.png") no-repeat 0 -606px}.container .page .reflexions{background:transparent url("../images/sprite.png") no-repeat 0 -795px}.container .page div.social-media-wrapper{display:block;overflow:hidden;margin:10px auto 0;width:360px}.container .page ul.social-icons li{float:left}.container .page ul.social-icons li a{display:block;width:32px;height:32px;margin-left:8px}.container .page ul.social-icons li a.twitter{background:transparent url("../images/sprite.png") no-repeat -352px -162px}.container .page ul.social-icons li a.github{background:transparent url("../images/sprite.png") repeat -352px -196px}.container .page ul.social-icons li a.email{background:transparent url("../images/sprite.png") repeat -352px -229px}.container .page ul.social-icons li a.linkedin{background:transparent url("../images/sprite.png") repeat -352px -263px}.container .page ul.social-icons li a.flickr{background:transparent url("../images/sprite.png") repeat -352px -297px}.container .page ul.social-icons li a.facebook{background:transparent url("../images/sprite.png") repeat -352px -332px}.container .page ul.social-icons li a.posterous{background:transparent url("../images/sprite.png") repeat -352px -365px}.container .page ul.social-icons li a.googlebuzz{background:transparent url("../images/sprite.png") repeat -352px -399px}.container .page ul.social-icons li a.picasa{background:transparent url("../images/sprite.png") repeat -352px -434px}.container footer{margin:15px 0}.container footer .footnote{text-align:center;color:#888;font-size:0.85em}.cols{width:100%;overflow:hidden}.cols .col1_3,.cols .col2_3,.cols .col3_3{float:left;width:31%;padding:0 10px}.cols .col1_3,.cols .col2_3{border-right:2px solid #000}.cols .col2_3,.cols .col3_3{border-left:1px solid #333}
+/* Welcome to Compass.
+ * In this file you should write your main styles. (or centralize your imports)
+ * Import this file using the following HTML or equivalent:
+ * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+/* line 14, ../../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-weight: inherit;
+  font-style: inherit;
+  font-size: 100%;
+  font-family: inherit;
+  vertical-align: baseline;
+}
+
+/* line 17, ../../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+body {
+  line-height: 1;
+  color: black;
+  background: white;
+}
+
+/* line 19, ../../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+ol, ul {
+  list-style: none;
+}
+
+/* line 21, ../../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  vertical-align: middle;
+}
+
+/* line 23, ../../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
+}
+
+/* line 25, ../../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+q, blockquote {
+  quotes: "" "";
+}
+/* line 96, ../../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+q:before, q:after, blockquote:before, blockquote:after {
+  content: "";
+}
+
+/* line 27, ../../../../../../var/lib/gems/1.8/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+a img {
+  border: none;
+}
+
+/* line 8, ../src/screen.scss */
+section, article, aside, header, footer, nav, dialog, figure {
+  display: block;
+  margin: 0;
+}
+
+/* line 21, ../src/screen.scss */
+body {
+  background: #222222 url("../images/bgtexture.png") repeat 0 0;
+  font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Verdana, sans-serif;
+  line-height: 1.2em;
+  color: #AAA;
+  font-size: 15px;
+}
+
+/* line 28, ../src/screen.scss */
+a {
+  color: #A8A565;
+  text-decoration: none;
+}
+/* line 31, ../src/screen.scss */
+a:hover {
+  color: #CFEB00;
+}
+
+/* line 36, ../src/screen.scss */
+h3 {
+  color: #CFEB00;
+  font-size: 1.3em;
+  margin-bottom: 5px;
+  padding: 2px 0;
+}
+
+/* line 43, ../src/screen.scss */
+p, a {
+  font-family: Helvetica;
+}
+
+/* line 47, ../src/screen.scss */
+.container {
+  width: 960px;
+  margin: auto;
+}
+/* line 50, ../src/screen.scss */
+.container header {
+  font-size: 3em;
+  padding: 75px 0;
+  color: #000;
+  display: block;
+}
+/* line 56, ../src/screen.scss */
+.container header h1 a {
+  text-decoration: none;
+  display: block;
+  width: 384px;
+  height: 150px;
+  margin: auto;
+  background: transparent url("../images/sprite.png") no-repeat 0 0;
+}
+/* line 67, ../src/screen.scss */
+.container .page h2 {
+  display: block;
+  padding: 10px 0;
+  margin-bottom: 10px;
+}
+/* line 71, ../src/screen.scss */
+.container .page h2 span {
+  margin-left: 10px;
+  border-bottom: 5px solid #A00;
+  background: #800;
+  color: #DDD;
+  -webkit-box-shadow: #333 0px 1px 1px;
+  -moz-box-shadow: #333 0px 1px 1px;
+  font-size: 1.2em;
+  padding: 10px 10px 8px;
+}
+/* line 83, ../src/screen.scss */
+.container .page .blogs, .container .page .social, .container .page .aboutme {
+  display: block;
+  overflow: hidden;
+  background: #111;
+  border: 1px solid #333;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-box-shadow: #111 2px 2px 2px;
+  -webkit-box-shadow: #111 2px 2px 2px;
+  margin-bottom: 20px;
+  padding: 0 0 10px;
+}
+/* line 96, ../src/screen.scss */
+.container .page .aboutme p {
+  padding: 5px 20px;
+}
+/* line 99, ../src/screen.scss */
+.container .page .about {
+  background: transparent url("../images/sprite.png") no-repeat 0 -162px;
+  display: block;
+  width: 246px;
+  height: 250px;
+  margin: 10px 24px;
+  float: right;
+  border: 1px solid #333;
+}
+/* line 109, ../src/screen.scss */
+.container .page .blog {
+  display: block;
+  width: 279px;
+  height: 187px;
+  margin: 10px auto 30px;
+  border: 1px solid #333;
+}
+/* line 116, ../src/screen.scss */
+.container .page .photography {
+  background: transparent url("../images/sprite.png") no-repeat 0 -417px;
+}
+/* line 117, ../src/screen.scss */
+.container .page .technology {
+  background: transparent url("../images/sprite.png") no-repeat 0 -606px;
+}
+/* line 118, ../src/screen.scss */
+.container .page .reflexions {
+  background: transparent url("../images/sprite.png") no-repeat 0 -795px;
+}
+/* line 120, ../src/screen.scss */
+.container .page div.social-media-wrapper {
+  display: block;
+  overflow: hidden;
+  margin: 10px auto 0;
+  width: 360px;
+}
+/* line 127, ../src/screen.scss */
+.container .page ul.social-icons li {
+  float: left;
+}
+/* line 129, ../src/screen.scss */
+.container .page ul.social-icons li a {
+  display: block;
+  width: 32px;
+  height: 32px;
+  margin-left: 8px;
+}
+/* line 135, ../src/screen.scss */
+.container .page ul.social-icons li a.twitter {
+  background: transparent url("../images/sprite.png") no-repeat -352px -162px;
+}
+/* line 136, ../src/screen.scss */
+.container .page ul.social-icons li a.github {
+  background: transparent url("../images/sprite.png") repeat -352px -196px;
+}
+/* line 137, ../src/screen.scss */
+.container .page ul.social-icons li a.email {
+  background: transparent url("../images/sprite.png") repeat -352px -229px;
+}
+/* line 138, ../src/screen.scss */
+.container .page ul.social-icons li a.linkedin {
+  background: transparent url("../images/sprite.png") repeat -352px -263px;
+}
+/* line 139, ../src/screen.scss */
+.container .page ul.social-icons li a.flickr {
+  background: transparent url("../images/sprite.png") repeat -352px -297px;
+}
+/* line 140, ../src/screen.scss */
+.container .page ul.social-icons li a.facebook {
+  background: transparent url("../images/sprite.png") repeat -352px -332px;
+}
+/* line 141, ../src/screen.scss */
+.container .page ul.social-icons li a.posterous {
+  background: transparent url("../images/sprite.png") repeat -352px -365px;
+}
+/* line 142, ../src/screen.scss */
+.container .page ul.social-icons li a.googlebuzz {
+  background: transparent url("../images/sprite.png") repeat -352px -399px;
+}
+/* line 143, ../src/screen.scss */
+.container .page ul.social-icons li a.picasa {
+  background: transparent url("../images/sprite.png") repeat -352px -434px;
+}
+/* line 150, ../src/screen.scss */
+.container footer {
+  margin: 15px 0;
+}
+/* line 153, ../src/screen.scss */
+.container footer .footnote {
+  text-align: center;
+  color: #888;
+  font-size: 0.85em;
+}
+
+/* line 162, ../src/screen.scss */
+.cols {
+  width: 100%;
+  overflow: hidden;
+}
+/* line 165, ../src/screen.scss */
+.cols .col1_3, .cols .col2_3, .cols .col3_3 {
+  float: left;
+  width: 31%;
+  padding: 0 10px;
+}
+/* line 170, ../src/screen.scss */
+.cols .col1_3, .cols .col2_3 {
+  border-right: 2px solid #000;
+}
+/* line 173, ../src/screen.scss */
+.cols .col2_3, .cols .col3_3 {
+  border-left: 1px solid #333;
+}
